# lyudikofe

./: .gitignore  Makefile  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.yml
deploy/minio_data/.minio.sys/: format.json
src/application/schemas/: auth.py  common.py  drinks.py  food.py  images.py  ingredients.py  macros.py  prices.py  string.py  users.py
src/application/services/: pagination.py
src/infra/auth/: provider.py  token.py
src/infra/minio/: get.py  provider.py
src/infra/postgres/: provider.py  tables.py
src/infra/postgres/gateways/: base.py  drinks.py  foods.py  images.py  ingredients.py
src/infra/postgres/migration/versions/: 2026-04-18_init.py  2026-04-21_price_table.py  2026-04-22_ingredients.py  2026-04-22_init.py  2026-04-29_user_update.py  2026-04-30_foods_drinks.py
src/main/: container.py  provider.py
src/presentation/fastapi/routes/core/: setup.py
src/presentation/fastapi/routes/core/categories/: api.py
src/presentation/fastapi/routes/core/drinks/: api.py
src/presentation/fastapi/routes/core/food/: api.py
src/presentation/fastapi/routes/core/ingredients/: api.py
src/presentation/fastapi/routes/core/seasons/: api.py
src/presentation/fastapi/routes/core/users/: api.py
src/usecase/categories/: create.py
src/usecase/drinks/: create.py  get.py  get_one.py  schemas.py
src/usecase/food/: create.py  get.py  get_one.py  schemas.py
src/usecase/ingredients/: get.py  get_one.py  schemas.py
src/usecase/seazons/: create.py
src/usecase/users/: create.py  get.py
