[project]
name = "lyudikofe"
version = "0.1.0"
description = ""
authors = [
    {name = "LizaG000",email = "elizaveta.vladimirovna.g@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "dynaconf>=3.2.11",
    "fastapi>=0.116.1",
    "h11>=0.16.0",
    "idna>=3.10",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "python-stdnum>=2.1",
    "sniffio>=1.3.1",
    "starlette>=0.47.1",
    "typing-inspection>=0.4.1",
    "typing-extensions>=4.14.1",
    "uvicorn>=0.35.0",
    "alembic (>=1.16.4,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "click (>=8.2.1,<9.0.0)",
    "dishka (>=1.6.0,<2.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "mako (>=1.3.10,<2.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg-binary (>=3.2.9,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]


[build-system]
build-backend = "poetry.core.masonry.api"
